[package]
name = "lunco-networking"
version = "0.1.0-dev"
edition = "2021"
description = "Networking layer for LunCoSim — thin lightyear (WebTransport) adapter over the always-on wire substrate in lunco-api/lunco-core."

[[bin]]
name = "net_smoke"
path = "src/bin/net_smoke.rs"
required-features = ["networking"]

[features]
# Default = headless-clean: no egui, no workbench, no networking wire. The
# GUI-free `lunco-sandbox-server` depends on this crate (transitively) WITHOUT
# the `ui` feature, so default MUST NOT pull egui/workbench (CQ-601). The GUI
# `lunco-sandbox` opts into `ui` explicitly.
default = []
# Turns the crate from a no-op facade into the real lightyear WebTransport
# adapter. Gated per D7 (substrate is always-on; only the wire is optional).
networking = ["dep:lightyear", "dep:serde", "dep:serde_json", "dep:bincode", "dep:interprocess", "dep:uuid", "dep:sha2", "dep:lunco-hash", "dep:crossbeam-channel", "dep:lunco-twin", "dep:lunco-twin-journal", "dep:lunco-hooks", "dep:lunco-hooks-rhai"]
# Client-prediction diagnostics (render-jitter / velocity / correction census in
# `diagnostics.rs`). OFF by default → not compiled into normal/shipping builds.
# Build with it when chasing netcode jitter; once compiled it's active unless
# silenced with `LUNCO_NET_DIAG=0`. Implies `networking` (pointless without the wire).
net-diag = ["networking"]
# Layer-4 in-sim UI (`mod ui`): the egui presence-cursor / tutorial overlays +
# the Network/settings menu bridge. Pulls `bevy_egui` (otherwise NOT linked) and
# the workbench. Implies `networking` because the bridge re-dispatches the typed
# JoinServer/LeaveServer commands from `client`/`sync`. OFF for headless servers.
ui = ["networking", "dep:bevy_egui", "workbench"]
# Perspective/layout sync against the workbench (`sync.rs` ActivatePerspective +
# WorkbenchLayout reads). UI-adjacent but no egui itself; pulled in by `ui`.
workbench = ["dep:lunco-workbench"]
# Host-side HTTP **bytes plane**: serve scenario assets by CID over HTTP instead of
# streaming them through the reliable QUIC channel (which queues without bound and
# stalls on multi-MB twins). Native-only in effect — the `lunco-api` asset server is
# cfg'd off on wasm, and a browser peer is never the host. Without this the host
# advertises no `asset_base_url` and clients use the in-session chunk fallback.
transport-http = ["networking", "lunco-api/transport-http"]

[dependencies]
bevy = { workspace = true }
lunco-workbench = { path = "../lunco-workbench", optional = true }
lunco-core = { path = "../lunco-core" }
lunco-fsw = { path = "../lunco-fsw" }
# `default-features = false`: we only use the registry/executor types + plugin,
# never the native `transport-http` server (axum/tokio/mio — wasm-incompatible).
# Native builds still get transport-http via lunco-sandbox's own default features.
lunco-api = { path = "../lunco-api", default-features = false }
# The ONE generic vessel-control command `SetPorts` lives here; the wire declares
# a channel for it (replacing the old rover drive/brake command pair).
lunco-cosim = { path = "../lunco-cosim" }
# Wire substrate needs avatar/sandbox-edit COMPONENTS + commands, never their
# egui editor UI — `default-features = false` keeps the networked headless server
# (and this crate) egui/winit-free.
lunco-avatar = { path = "../lunco-avatar", default-features = false }
# `default-features = false`: we read only `CelestialReferenceFrame` (the
# always-compiled registry component) for snapshot grid parenting — never
# celestial's egui inspector (`ui` feature). Keeps the headless server egui-free.
lunco-celestial = { path = "../lunco-celestial", default-features = false }
lunco-sandbox-edit = { path = "../lunco-sandbox-edit", default-features = false }
# `default-features = false`: we use only the egui-free `Presence`/`UserId`/
# `PresenceInfo` document-lifecycle types, never doc-bevy's `ui` editor-intent
# systems. Default features here would turn on `lunco-doc-bevy/ui` (→ bevy_egui)
# for the WHOLE build via feature unification — the real CQ-601 headless leak.
lunco-doc-bevy = { path = "../lunco-doc-bevy", default-features = false }
lunco-doc = { path = "../lunco-doc" }
lunco-settings = { path = "../lunco-settings" }
lunco-workspace = { path = "../lunco-workspace" }
# Promote a downloaded scenario → editable on-disk Twin (`PromoteScenario`):
# `TwinMode::open` + `Twin::promote_to_twin` (writes `twin.toml`). Native-only in
# effect (web has no folder fs). Optional — only the `networking` build uses it.
lunco-twin = { path = "../lunco-twin", optional = true }
# Journal-on-wire (scenario-plane sync): ship `JournalEntry`s host→client, applied
# via `Journal::append_remote` (which merges). Optional — networking build only.
lunco-twin-journal = { path = "../lunco-twin-journal", optional = true, features = ["hooks"] }
# Pluggable convergent merge policy authored in rhai ("conflict resolution
# strategies but in rhai"): register a deterministic merge hook and switch the
# journal to `MergeStrategy::Scripted`. Optional — networking build only.
lunco-hooks = { path = "../lunco-hooks", optional = true }
lunco-hooks-rhai = { path = "../lunco-hooks-rhai", optional = true }
# Scenario asset cache root (`cache_dir()`), for the Phase-3 client-side
# `scenarios/<id>/` download target. Native + wasm-safe path helper.
lunco-assets = { path = "../lunco-assets" }
# Cross-platform asset persistence: native `FileStorage` (std::fs) + wasm
# `OpfsStorage` (OPFS). Shared (not native-only) — the web client caches assets
# through it too. Also serves the host's TLS cert file reads on native.
lunco-storage = { path = "../lunco-storage" }
# Optional: only the Layer-4 `mod ui` (egui overlays) uses it, behind the `ui`
# feature. Headless servers never link egui.
bevy_egui = { workspace = true, optional = true }
leafwing-input-manager = { workspace = true }
# Read by the wire's `gather_snapshot`: avian velocity (LinearVelocity/
# AngularVelocity) for client-side prediction, big_space `CellCoord` so
# replication carries the integer cell alongside the f64 absolute position.
avian3d = { workspace = true }
big_space = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
# Binary wire codec for the snapshot/envelope hot path (replaces serde_json there —
# ~2x smaller, no field names). serde_json stays for the Reflect command payload.
bincode = { workspace = true, optional = true }
# Stable scenario identity (twin.toml uuid) carried on the
# ScenarioManifest envelope; works on native + wasm (the workspace uuid
# features pull a wasm-capable getrandom backend).
uuid = { workspace = true, optional = true }
# SHA-256 for the scenario manifest revision digest + per-asset content
# addressing. Pure Rust → compiles on wasm32-unknown-unknown so the web
# client verifies asset hashes identically to the native client.
sha2 = { workspace = true, optional = true }
# Cross-platform completion channel for async asset persist (native task pool +
# wasm spawn_local both push outcomes here). Gated with the networking feature.
crossbeam-channel = { workspace = true, optional = true }
# IPLD content-addressing (IPFS interop): asset ids are real CIDv1
# (raw codec + sha2-256 multihash), resolvable by `ipfs get`/`ipfs pin`.
# Minted through the shared hashing substrate's CID tier (one canonical impl,
# shared with the precompute disk cache) — it re-exports the `Cid` type so this
# crate no longer depends on `cid`/`multihash-codetable` directly.
lunco-hash = { path = "../lunco-hash", features = ["cid"], optional = true }
# URL-dialing WebTransport client IO (`wt_client`): lets the browser/native connect by
# HOSTNAME (`https://sandbox.lunco.space:5888`) so a real CA cert validates with no
# digest — lightyear's built-in IO only dials `https://{ip}`.
# `dangerous-configuration` exposes wtransport's `with_no_cert_validation`, used
# ONLY for direct bare-IP native connections (a self-signed server over LAN/dev,
# no CA cert) — see `native_client_config` in wt_client.rs. Hostname connections
# always use full CA validation; the insecure path never applies to them.
aeronet_webtransport = { version = "0.21", features = ["client", "dangerous-configuration"] }
lightyear_aeronet = { version = "0.28.0", default-features = false }


# Native (desktop / dedicated server): full client+server WebTransport.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Native byte-GET for the HTTP asset plane (`http_fetch`). Already in the workspace
# tree (lunco-assets/celestial use it), so this pulls no new transitive deps. Web
# uses `lunco_assets::web_fetch` (browser `fetch`) instead.
ureq = { workspace = true }
lightyear = { version = "0.28.0", default-features = false, optional = true, features = [
  "client",
  "server",
  # 0.27 split these out of an implicit bundle into standalone features (they're
  # in lightyear's `default`, which we disable). `replication` is mandatory —
  # lightyear's lib unconditionally `use`s `lightyear_replication`. We replicate
  # snapshots + client-predict, so prediction/interpolation are needed too.
  "replication",
  "prediction",
  "interpolation",
  "netcode",
  "webtransport",
  "webtransport_self_signed",
  "webtransport_dangerous_configuration",
] }
# Host TLS identity loading (production certbot cert via env paths). File reads
# route through lunco-storage (shared dep, see above); rustls-pemfile turns the
# PEM into DER for wtransport's sync `Identity::new`.
# Pinned to the wtransport that aeronet_webtransport 0.21 (lightyear 0.28's IO
# layer) links — the Identity handed to lightyear must be the same type. Do not
# bump past it until lightyear/aeronet do.
wtransport = "0.6.1"
rustls-pemfile = "2"
# Single-instance IPC for `luncosim://` deep-links: forward a clicked link to the
# already-running app over a local socket (Unix domain socket / Windows named
# pipe). Optional — only the full networking build needs it.
interprocess = { version = "2", optional = true }

# Browser (wasm): client-only WebTransport. Cert digest comes from the URL hash.
[target.'cfg(target_family = "wasm")'.dependencies]
lightyear = { version = "0.28.0", default-features = false, optional = true, features = [
  "client",
  # See native block: 0.27 made these standalone; `replication` is mandatory.
  "replication",
  "prediction",
  "interpolation",
  "netcode",
  "webtransport",
  "webtransport_self_signed",
] }
# Non-optional: `NetworkMode::from_url` (query parse + `performance.now()` for a
# per-tab client id) and the client adapter's cert-digest read both need it, and
# the crate is only ever compiled when the `networking` feature pulls it in.
web-sys = { workspace = true, features = ["Window", "Location", "Performance"] }
# Drives the async OPFS asset-persist future on the main thread without blocking
# (the wasm counterpart of the native `AsyncComputeTaskPool` spawn). Only ever
# compiled when the `networking` feature pulls this crate in (see note above).
wasm-bindgen-futures = { workspace = true }
# On wasm the getrandom crates `compile_error!` unless a browser-crypto backend
# is enabled. Two incompatible majors land in our graph, each needing its own
# feature turned on via unification (we never call getrandom directly):
#   * 0.2 — via ahash/const-random (egui). Uses the `js` feature.
#   * 0.4 — NEW with lightyear 0.27: `rand 0.10` (in `lightyear_link`) pulls it.
#     getrandom 0.3+ needs BOTH the `wasm_js` feature (here) AND
#     `--cfg getrandom_backend="wasm_js"` (set globally by scripts/build_web.sh).
getrandom_v02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_v04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true
