[package]
name = "lunco-obstacle-field"
version = "0.1.0-dev"
edition = "2021"
description = "Procedural crater + rock field generation for rover testing in LunCoSim"

[dependencies]
# `bevy_render` carries `VisibilityRange` (mesh LOD) and `Mesh`; `bevy_pbr` the
# StandardMaterial used for generated terrain/rock surfaces. The pure generation
# modules (spec/sampler/field/assets) only touch glam (Vec2/Vec3), available at
# the substrate level — the render features are for the plugin layer.
bevy = { workspace = true, features = ["bevy_pbr", "bevy_mesh", "bevy_render", "bevy_scene", "bevy_light"] }
bevy_mesh = { workspace = true }
avian3d = { workspace = true }
big_space = { workspace = true }
lunco-core = { path = "../lunco-core" }
lunco-terrain = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
