[package]
name = "lunco-obstacle-field"
version = "0.1.0-dev"
edition = "2021"
description = "Procedural crater + rock field generation for rover testing in LunCoSim"

[dependencies]
# `bevy_render` carries `VisibilityRange` (mesh LOD) and `Mesh`; `bevy_pbr` the
# StandardMaterial used for generated terrain/rock surfaces. The pure generation
# modules (spec/sampler/field/assets) only touch glam (Vec2/Vec3), available at
# the substrate level — the render features are for the plugin layer.
bevy = { workspace = true, features = ["bevy_pbr", "bevy_mesh", "bevy_render", "bevy_world_serialization", "bevy_light"] }
bevy_mesh = { workspace = true }
avian3d = { workspace = true }
big_space = { workspace = true }
lunco-core = { path = "../lunco-core" }
lunco-time = { path = "../lunco-time" }
# `HeightGrid` implements the shared `HeightSource` trait (the impl lives with the
# type to satisfy the orphan rule); `lunco-terrain-core` is the pure leaf that
# defines the trait. (The former `lunco-terrain` dep was unused and was removed.)
lunco-terrain-core = { workspace = true }
# Journal plane: a live `ObstacleFieldSpec` tweak is recorded as a `DomainKind::
# ObstacleField` op so it persists + syncs like every other domain. `lunco-doc`
# supplies `DocumentId` (the op key); `lunco-doc-bevy` the `JournalResource`
# handle; `lunco-twin-journal` the `OpPayload` trait (impl'd here to satisfy the
# orphan rule, since `ObstacleFieldOp` is defined here).
lunco-doc = { path = "../lunco-doc" }
lunco-doc-bevy = { path = "../lunco-doc-bevy", default-features = false }
lunco-twin-journal = { path = "../lunco-twin-journal" }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
