[package]
name = "lunco-obstacle-field"
version = "0.1.0-dev"
edition = "2021"
description = "Procedural crater + rock field generation for rover testing in LunCoSim"

[dependencies]
# RENDER-FREE. `bevy_mesh` gives `Mesh` + `Mesh3d`, `bevy_camera` gives
# `Visibility` + `VisibilityRange` — neither depends on `bevy_render`, so this
# crate does not drag wgpu/naga into the `--no-ui` server or the wasm worker.
#
# `bevy_pbr` was here for the `StandardMaterial` on generated terrain/rock
# surfaces. That is now stated as `lunco_render::PbrLook` intent and bound by
# `lunco-render-bevy`. DO NOT add `bevy_pbr` back: if you need a material here,
# you want an intent component instead. See docs/architecture/render-decoupling.md.
bevy = { workspace = true, features = ["bevy_mesh", "bevy_camera", "bevy_world_serialization", "bevy_light"] }
bevy_mesh = { workspace = true }
lunco-render = { path = "../lunco-render" }
avian3d = { workspace = true }
lunco-physics = { workspace = true }
big_space = { workspace = true }
lunco-core = { path = "../lunco-core" }
lunco-time = { path = "../lunco-time" }
# `HeightGrid` implements the shared `HeightSource` trait (the impl lives with the
# type to satisfy the orphan rule); `lunco-terrain-core` is the pure leaf that
# defines the trait. (The former `lunco-terrain` dep was unused and was removed.)
lunco-terrain-core = { workspace = true }
# Journal plane: a live `ObstacleFieldSpec` tweak is recorded as a `DomainKind::
# ObstacleField` op so it persists + syncs like every other domain. `lunco-doc`
# supplies `DocumentId` (the op key); `lunco-doc-bevy` the `JournalResource`
# handle; `lunco-twin-journal` the `OpPayload` trait (impl'd here to satisfy the
# orphan rule, since `ObstacleFieldOp` is defined here).
lunco-doc = { path = "../lunco-doc" }
lunco-doc-bevy = { path = "../lunco-doc-bevy", default-features = false }
lunco-twin-journal = { path = "../lunco-twin-journal" }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
